# cribl

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: fly-deploy.yml
app/: dummy_log_generator.py  logs.py  server.py
app/server/: primary.py  secondary.py
fly/primary/: fly.toml
fly/secondary/: fly.toml
tests/: test_logs.py
