[tool.poetry]
name = "cribl"
version = "0.1.0"
description = "Log Agent"
authors = ["Jasleen Kaur <jasleenkaur1909@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.2"
pytest = "^8.2.2"
pyright = "^1.1.372"
pytest-cov = "^5.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.poe.tasks]
install = "poetry install"
test = "python -m pytest"
lint = "ruff check"
dev = "fastapi dev ./app/server.py"
prod = "fastapi run ./app/server.py"
build = "docker build -t cribl ."
up = "docker-compose up -d --force-recreate"
down = "docker-compose down"
logs = "docker-compose logs -f"
rm = "docker image rm cribl"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
